# whisper-serving-bench

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  NEXT_SESSION.md  README.md  pyproject.toml
adapters/: __init__.py  base.py  faster_whisper_adapter.py  hf_transformers.py  ray_serve_adapter.py  ray_serve_deployment.py  triton_adapter.py  vllm_adapter.py
adapters/triton_model_repository/whisper/: config.pbtxt
adapters/triton_model_repository/whisper/1/: model.py
bench/: __init__.py  config.py  data.py  harness.py  load_generator.py  metrics.py  normalize.py  results.py  wer.py
configs/: eval_sets.yaml  pricing.yaml
configs/cells/: example_fw_a100_c8.yaml  example_hf_a100_c8.yaml  example_vllm_l4_c8.yaml  v1_fw_a100_c1.yaml  v1_fw_a100_c128.yaml  v1_fw_a100_c32.yaml  v1_fw_a100_c64.yaml  v1_fw_a100_c8.yaml  v1_fw_beam1_a100_c1.yaml  v1_fw_beam1_a100_c128.yaml  v1_fw_beam1_a100_c32.yaml  v1_fw_beam1_a100_c64.yaml  v1_fw_beam1_a100_c8.yaml  v1_fw_beam1_l4_c1.yaml  v1_fw_beam1_l4_c128.yaml  v1_fw_beam1_l4_c32.yaml  v1_fw_beam1_l4_c64.yaml  v1_fw_beam1_l4_c8.yaml  v1_fw_l4_c1.yaml  v1_fw_l4_c128.yaml  v1_fw_l4_c32.yaml  v1_fw_l4_c64.yaml  v1_fw_l4_c8.yaml  v1_hf_a100_c1.yaml  v1_hf_a100_c128.yaml  v1_hf_a100_c32.yaml  v1_hf_a100_c64.yaml  v1_hf_a100_c8.yaml  v1_hf_l4_c1.yaml  v1_hf_l4_c128.yaml  v1_hf_l4_c32.yaml  v1_hf_l4_c64.yaml  v1_hf_l4_c8.yaml  v1_vllm_a100_c1.yaml  v1_vllm_a100_c128.yaml  v1_vllm_a100_c1_baseline.yaml  v1_vllm_a100_c1_crfilter.yaml  v1_vllm_a100_c1_prompt.yaml  v1_vllm_a100_c1_vad.yaml  v1_vllm_a100_c32.yaml  (+7 more)
configs/sweeps/: v1_faster_whisper.yaml  v1_fw_beam1_a100.yaml  v1_fw_beam1_l4.yaml  v1_hf_a100.yaml  v1_hf_l4.yaml  v1_vllm_a100.yaml  v1_vllm_hallucination_fixes.yaml  v1_vllm_l4.yaml
docker/: Dockerfile.faster-whisper  Dockerfile.ray-serve  Dockerfile.triton  Dockerfile.vllm
docs/: METHODOLOGY.md  WRITEUP_OUTLINE.md
docs/session_notes/: 2026-04-30.md  2026-05-01.md  2026-05-05.md  2026-05-10.md
results/published/l4_only/: v1_decision_matrix.md  v1_summary.csv
results/published/v1_partial/: v1_decision_matrix.md  v1_summary.csv
scripts/: analyze.py  prepare_data.py  render_v1_table_pngs.py  run_cell.py  run_sweep.py
writeups/: v1.md  v1_post.md  v1_substack_draft.md
writeups/v1_publishable_assets/: README.md
